tests/NormalTests/paczka1/fuzzy1/80348803.err
Error in line 1: pDJvti64Gq A242 22,7
Error in line 2: pDJvti64Gq S389 86,6
Error in line 6: pDJvti64Gq S246 69,0
Error in line 12: A276 S389 90,6
Error in line 28: pDJvti64Gq A276 112,0
Error in line 35: 31ce S246 54,5
